--- a/Bootcamp/ProyectoV2.0/4.Eureka-Server/src/main/resources/application.yaml
+++ b/Bootcamp/ProyectoV2.0/4.Eureka-Server/src/main/resources/application.yaml
@@ -2,9 +2,15 @@ spring:
   application:
     name: Eureka-Server
 
-eureka:
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-server:
-  port: 8761
+  cloud:
+    config:
+      uri: http://localhost:8084
+      username: root
+      password: root
+
+#eureka:
+  #client:
+    #registerWithEureka: false
+    #fetchRegistry: false
+#server:
+  #port: 8761
