--- a/Bootcamp/ProyectoV2.0/2.Credits/src/main/resources/application.yaml
+++ b/Bootcamp/ProyectoV2.0/2.Credits/src/main/resources/application.yaml
@@ -1,9 +1,18 @@
-server:
-  port: 8082
-
 spring:
   application:
-    name: Credits-Client
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/credits
+    name: 2.credits
+  cloud:
+    config:
+      uri: http://localhost:8084
+      username: root
+      password: root
+
+#server:
+  #port: 8082
+
+#spring:
+  #application:
+    #name: Credits-Client
+  #data:
+    #mongodb:
+      #uri: mongodb://localhost:27017/credits
