--- a/Bootcamp/ProyectoV2.0/configserver/src/main/resources/application.yaml
+++ b/Bootcamp/ProyectoV2.0/configserver/src/main/resources/application.yaml
@@ -1,11 +1,14 @@
 server:
-  port: 8086
+  port: 8084
+
 spring:
+  application:
+    name: configserver
   cloud:
     config:
       server:
         git:
-          uri: https://github.com/zxxjuliusxxz/NTT_DATA/tree/main/Bootcamp/ProyectoV1.0
+          uri: https://github.com/zxxjuliusxxz/NTT_DATA.git
           default-label: main
           search-paths: configdata
           username: ${GIT_USERNAME}
@@ -14,5 +17,3 @@ spring:
       user:
         name: root
         password: root
-  application:
-    name: config-services
