--- a/Bootcamp/ProyectoV3.0/1.Account/src/main/resources/bootstrap.yaml
+++ b/Bootcamp/ProyectoV3.0/1.Account/src/main/resources/bootstrap.yaml
@@ -6,3 +6,28 @@ spring:
       uri: http://localhost:8084
       username: root
       password: root
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      afp:
+        registerHealthIndicator: true
+        eventConsumerBufferSize: 10
+        slidingWindowType: COUNT_BASED
+        slidingWindowSize: 5
+        failureRateThreshold: 5
+        waitDurationInOpenState: 5s
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
