--- a/Bootcamp/ProyectoV3.0/2.Credits/pom.xml
+++ b/Bootcamp/ProyectoV3.0/2.Credits/pom.xml
@@ -42,6 +42,19 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- https://mavenlibs.com/maven/dependency/org.springframework.cloud/spring-cloud-starter-circuitbreaker-reactor-resilience4j -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-circuitbreaker-reactor-resilience4j</artifactId>
+			<version>2.1.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
