--- a/Bootcamp/ProyectoV3.0/4.Eureka-Server/src/main/resources/bootstrap.yml
+++ b/Bootcamp/ProyectoV3.0/4.Eureka-Server/src/main/resources/bootstrap.yml
@@ -1,17 +1,14 @@
-server:
-  port: 8761
-
 spring:
   application:
-    name: discovery-server
+    name: registry-service
+
+  eureka:
+    client:
+      registerWithEureka: false
+      fetchRegistry: false
 
   cloud:
     config:
       uri: http://localhost:8084
       username: root
       password: root
-
-  eureka:
-    client:
-      registerWithEureka: false
-      fetchRegistry: false
